--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <link rel="stylesheet" href="./css/main.min.css" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Web Studio</title>
   </head>
   <body>
@@ -65,7 +67,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section section-features">
         <div class="conteiner">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features">
@@ -377,7 +379,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section section-clients">
         <div class="conteiner">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="clients">
