--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,8 @@
 
   <link rel="stylesheet" href="./css/main.min.css" />
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Web Studio</title>
   <body>
     <header class="header">
