--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
-              <img src="./img/img.jpg" alt="man" class="team__img" width="270" />
+              <img src="./img/img.jpg" alt="man" class="team__img" />
               <div class="team__describe">
                 <h3 class="team__title">Ігор Дем'яненко</h3>
                 <p class="team__text">Product Designer</p>
@@ -205,7 +205,7 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/img-1.jpg" alt="woman" class="team__img" width="270" />
+              <img src="./img/img-1.jpg" alt="woman" class="team__img" />
               <div class="team__describe">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="team__positon">Frontend Developer</p>
@@ -262,7 +262,7 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/img-2.jpg" alt="man" class="team__img" width="270" />
+              <img src="./img/img-2.jpg" alt="man" class="team__img" />
               <div class="team__describe">
                 <h3 class="team__name">Микола Тарасов</h3>
                 <p class="team__positon">Marketing</p>
@@ -319,7 +319,7 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/img-3.jpg" alt="man" class="team__img" width="270" />
+              <img src="./img/img-3.jpg" alt="man" class="team__img" />
               <div class="team__describe">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="team__positon">UI Designer</p>
