--- a/index.html
+++ b/index.html
@@ -27,35 +27,69 @@
     <header class="header">
       <div class="header__conteiner conteiner">
         <a href="./index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="./index.html" class="nav__link nav__link--current">Студія</a>
-            </li>
-            <li class="nav__item">
-              <a href="./portfolio.html" class="nav__link">Портфоліо</a>
-            </li>
-            <li class="nav__item"><a href="link" class="nav__link">Контакти</a></li>
-          </ul>
-        </nav>
-        <ul class="header-contacts">
-          <li class="header-contacts__ietm">
-            <a href="mailto:info@devstudio.com" class="header-contacts__link link">
-              <svg class="header-contacts__icon" width="16" height="12">
-                <use href="./img/svg/symbol-defs.svg#icon-mail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contacts__ietm">
-            <a href="tel:+380961111111" class="header-contacts__link">
-              <svg class="header-contacts__icon" width="10" height="16">
-                <use href="./img/svg/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <button type="button" class="header--open">
+          <svg class="header__icon--open" width="40" height="40">
+            <use href="./img/svg/symbol-defs.svg#icon-open"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu">
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="./index.html" class="nav__link nav__link--current">Студія</a>
+              </li>
+              <li class="nav__item">
+                <a href="./portfolio.html" class="nav__link">Портфоліо</a>
+              </li>
+              <li class="nav__item"><a href="link" class="nav__link">Контакти</a></li>
+            </ul>
+          </nav>
+          <div class="modal-contacts">
+            <ul class="header-contacts">
+              <li class="header-contacts__ietm">
+                <a href="mailto:info@devstudio.com" class="header-contacts__link link">
+                  <svg class="header-contacts__icon" width="16" height="12">
+                    <use href="./img/svg/symbol-defs.svg#icon-mail"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="header-contacts__ietm">
+                <a
+                  href="tel:+380961111111"
+                  class="header-contacts__link header-contacts__link--number"
+                >
+                  <svg class="header-contacts__icon" width="10" height="16">
+                    <use href="./img/svg/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+            <ul class="modal-contacts__list">
+              <li class="modal-contacts__item">
+                <a href="" class="modal-contacts__link">Instagram</a
+                ><span class="modal-contacts__stick">|</span>
+              </li>
+              <li class="modal-contacts__item">
+                <a href="" class="modal-contacts__link">Twitter</a
+                ><span class="modal-contacts__stick">|</span>
+              </li>
+              <li class="modal-contacts__item">
+                <a href="" class="modal-contacts__link">Facebook</a
+                ><span class="modal-contacts__stick">|</span>
+              </li>
+              <li class="modal-contacts__item">
+                <a href="" class="modal-contacts__link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+          <button type="button" class="header--close">
+            <svg class="header__icon--open" width="40" height="40">
+              <use href="./img/svg/symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
     <main>
@@ -589,5 +623,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
