--- a/index.html
+++ b/index.html
@@ -162,15 +162,33 @@
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="work__list">
             <li class="work__item">
-              <img src="./img/box-1.jpg" alt="computer" width="370" class="work__img" />
+              <img
+                srcset="./img/box-1.jpg 1x, ./img/box-1@2x.jpg 2x"
+                src="./img/box-1.jpg"
+                alt="computer"
+                width="370"
+                class="work__img"
+              />
               <p class="work__text">Десктопні додатки</p>
             </li>
             <li class="work__item">
-              <img src="./img/box-2.jpg" alt="phone" width="370" class="work__img" />
+              <img
+                srcset="./img/box-2.jpg 1x, ./img/box-2@2x 2x"
+                src="./img/box-2.jpg"
+                alt="phone"
+                width="370"
+                class="work__img"
+              />
               <p class="work__text">Мобільні додатки</p>
             </li>
             <li class="work__item">
-              <img src="./img/box-3.jpg" alt="tablet" width="370" class="work__img" />
+              <img
+                srcset="./img/box-3.jpg 1x, ./img/box-3@2x.jpg 2x"
+                src="./img/box-3.jpg"
+                alt="tablet"
+                width="370"
+                class="work__img"
+              />
               <p class="work__text">Дизайнерські рішення</p>
             </li>
           </ul>
@@ -182,7 +200,12 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
-              <img src="./img/img.jpg" alt="man" class="team__img" />
+              <img
+                srcset="./img/img.jpg 1x, ./img/img@3.jpg 2x"
+                src="./img/img.jpg"
+                alt="man"
+                class="team__img"
+              />
               <div class="team__describe">
                 <h3 class="team__title">Ігор Дем'яненко</h3>
                 <p class="team__text">Product Designer</p>
@@ -239,7 +262,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/img-1.jpg" alt="woman" class="team__img" />
+              <img
+                srcset="./img/img-1.jpg 1x, ./img/img-1@2x.jpg 2x"
+                src="./img/img-1.jpg"
+                alt="woman"
+                class="team__img"
+              />
               <div class="team__describe">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="team__positon">Frontend Developer</p>
@@ -296,7 +324,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/img-2.jpg" alt="man" class="team__img" />
+              <img
+                srcset="./img/img-2.jpg 1x, ./img/img-2@2x.jpg 2x"
+                src="./img/img-2.jpg"
+                alt="man"
+                class="team__img"
+              />
               <div class="team__describe">
                 <h3 class="team__name">Микола Тарасов</h3>
                 <p class="team__positon">Marketing</p>
@@ -353,7 +386,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/img-3.jpg" alt="man" class="team__img" />
+              <img
+                srcset="./img/img-3.jpg 1x, ./img/img-3@3.jpg 2x"
+                src="./img/img-3.jpg"
+                alt="man"
+                class="team__img"
+              />
               <div class="team__describe">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="team__positon">UI Designer</p>
