--- a/portfolio.html
+++ b/portfolio.html
@@ -115,6 +115,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-1.jpg    1x,
+                    ./img/portfolio/img-portfolio-1@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-1.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -136,6 +140,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-2.jpg    1x,
+                    ./img/portfolio/img-portfolio-2@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-2.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -157,6 +165,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-3.jpg    1x,
+                    ./img/portfolio/img-portfolio-3@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-3.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -178,6 +190,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-4.jpg1x,
+                    ./img/portfolio/img-portfolio-4@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-4.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -199,6 +215,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-5.jpg1x,
+                    ./img/portfolio/img-portfolio-5@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-5.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -220,6 +240,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-6.jpg1x,
+                    ./img/portfolio/img-portfolio-6@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-6.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -241,6 +265,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-7.jpg1x,
+                    ./img/portfolio/img-portfolio-7@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-7.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -262,6 +290,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-8.jpg1x,
+                    ./img/portfolio/img-portfolio-8@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-8.jpg"
                   alt="basketball poster"
                   class="card__img"
@@ -283,6 +315,10 @@
             <a href="" class="card__link link">
               <div class="card__describe">
                 <img
+                  srcset="
+                    ./img/portfolio/img-portfolio-9.jpg1x,
+                    ./img/portfolio/img-portfolio-9@2x.jpg 2x
+                  "
                   src="./img/portfolio/img-portfolio-9.jpg"
                   alt="basketball poster"
                   class="card__img"
