--- a/portfolio.html
+++ b/portfolio.html
@@ -136,13 +136,13 @@
                       ./img/portfolio/mobile-img-portfolio-1.jpg    1x,
                       ./img/portfolio/mobile-img-portfolio-1@2x.jpg 2x
                     "
-                    media="(min-width:480px)"
+                    media="(max-width:767px)"
                   />
                   <img
                     src="./img/portfolio/mobile-img-portfolio-1.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
 
@@ -189,7 +189,7 @@
                     src="./img/portfolio/mobile-img-portfolio-2.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
@@ -235,7 +235,7 @@
                     src="./img/portfolio/mobile-img-portfolio-3.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
@@ -281,7 +281,7 @@
                     src="./img/portfolio/mobile-img-portfolio-4.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
@@ -327,7 +327,7 @@
                     src="./img/portfolio/mobile-img-portfolio-5.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
@@ -373,7 +373,7 @@
                     src="./img/portfolio/mobile-img-portfolio-6.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
@@ -419,7 +419,7 @@
                     src="./img/portfolio/mobile-img-portfolio-7.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
@@ -465,7 +465,7 @@
                     src="./img/portfolio/mobile-img-portfolio-8.jpg"
                     alt="basketball poster"
                     class="card__img"
-                    width="370"
+                    width="450"
                   />
                 </picture>
                 <p class="card__text">
