--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 />
                 <source
                   srcset="./img/mobile-img.jpg 1x, ./img/mobile-img@2x.jpg 2x"
-                  media="(min-width:480px)"
+                  media="(max-width:768px)"
                 />
                 <img src="./img/mobile-img.jpg" alt="man" class="team__img" />
               </picture>
@@ -280,7 +280,7 @@
                 />
                 <source
                   srcset="./img/mobile-img-1.jpg 1x, ./img/mobile-img-1@2x.jpg 2x"
-                  media="(min-width:480px)"
+                  media="(max-width:767px)"
                 />
                 <img src="./img/mobile-img-1.jpg" alt="man" class="team__img" />
               </picture>
@@ -351,7 +351,7 @@
                 />
                 <source
                   srcset="./img/mobile-img-2.jpg 1x, ./img/mobile-img-2@2x.jpg 2x"
-                  media="(min-width:480px)"
+                  media="(max-width:768px)"
                 />
                 <img src="./img/mobile-img-2.jpg" alt="man" class="team__img" />
               </picture>
@@ -422,7 +422,7 @@
                 />
                 <source
                   srcset="./img/mobile-img-3.jpg 1x, ./img/mobile-img-3@2x.jpg 2x"
-                  media="(min-width:480px)"
+                  media="(max-width:768px)"
                 />
                 <img src="./img/mobile-img-3.jpg" alt="man" class="team__img" />
               </picture>
